Use a lock per socket instead of EventThread.